syntax = "proto3";

// This file follows google's gRPC naming conventions:
// https://cloud.google.com/apis/design/naming_convention

// import "google/protobuf/empty.proto";
// import "google/protobuf/wrappers.proto";
// import "google/protobuf/timestamp.proto";
import "api/gateway/auth/messages.proto";

option objc_class_prefix = "MGA";
option go_package =
    "gitlab.figo.systems/platform/monoskope/monoskope/api/gateway/auth";

package gateway.auth;

service Auth {
  // Auth
  rpc GetAuthInformation(AuthState) returns(AuthInformation);
  rpc ExchangeAuthCode(AuthCode) returns(UserInfo);
}
